2005-04-25  Mark D. Baushke  <mdb@cvshome.org>

	* server.c: Add support for <pam/pam_appl.h> to allow
	--enable-pam to work on MacOSX 10.2 and newer.
	(Pach from Moriyoshi Koizumi <moriyoshi@at.wakwak.com>.)

2005-04-25  Derek Price  <derek@ximbiot.com>

	* mkmodules.c (mkmodules): Remove `#if 0' and reformat comment.

2005-04-22  Mark D. Baushke  <mdb@cvshome.org>

	* expand_path.c (expand_variable): Add SESSIONID and COMMITID
	internal variables. Both return the unique global session id of
	the CVS process. Passing this information to administrative
	triggers seems reasonable. (The same feature exists in CVSNT and
	the names were chosen to be the same as the CVSNT names.)

	* sanity.sh (info): Add a test for $COMMITID and $SESSIONID.

2005-04-20  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (rcs4): Fix a typo.

2005-04-20  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs5): Minor cosmetic change.

2005-04-20  Derek Price  <derek@ximbiot.com>

	* sanity.sh (tests): Add rcs4.
	(rcs5): Add comments.

2005-04-20  Derek Price  <derek@ximbiot.com>

	* rcs.c (expand_keywords): Avoid buffer overflow.
	(Original patch from Stewart Brodie <stewart@eh.org>.)

	* sanity.sh (rcs5): New tests for the above.

2005-04-08  Derek Price  <derek@ximbiot.com>

	* edit.c (edit_fileproc, unedit_fileproc): s/GMT/-0000/.
	* rcs.c (RCS_getrevtime): Ditto, & replace a sprintf into a static
	buffer with an Xasprintf which creates a dynamic one.
	* sanity.sh: Update tests to compensate.
	(Original bug report from Ian Abbott <abbotti@mev.co.uk>.)

2005-03-26  Mark D. Baushke  <mdb@cvshome.org>

	* checkout.c (checkout_proc): Use Xasprintf/xstrdup instead of
	xmalloc/strcpy+strcat.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerated.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* rcs.c (linevector_add): Use xnrealloc.
	* server.c (serve_argument): Ditto.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* rcs.c (linevector_copy): Use xtimes in argument.
