@@ -1,3 +1,9 @@
+2005-04-27  Derek Price  <derek@ximbiot.com>
+
+	* lock.c (struct lock): Store lockdir name.
+	(masterlock): Remove global.
+	(remove_lock_files, clear_lock, set_lock): Update to compensate.
+
 2005-04-25  Mark D. Baushke  <mdb@cvshome.org>
 
 	* server.c: Add support for <pam/pam_appl.h> to allow
